2006-06-13 Sandro Santilli <strk@refractions.net>

	* source/geom/Geometry.cpp: added self comparison check
	in compareTo().
	
2006-06-12 Sandro Santilli <strk@refractions.net>

	* source/simplify/LineSegmentIndex.cpp: explicitly initialized
	parent class in constructors.
	* source/headers/geos/index/quadtree/Root.h,
	source/headers/geos/operation/distance/ConnectedElementPointFilter.h,
	source/headers/geos/operation/polygonize/Polygonizer.h:
	Removed unused parameter warnings.
	* source/headers/geos/geom/GeometryFilter.h:
	added assert(0) version of filter_ro() and filter_rw()
	to allow implementations to only defined the required
	one.
	* source/headers/geos/operation/polygonize/Polyginzer.h,
	source/headers/geos/index/quadtree/Root.h:
	Removed unused parameter warnings.
	* source/headers/geos/io/WKTWriter.h,
	source/io/WKTWriter.cpp: fixed compiler warnings,
	fixed some methods to omit unused parameters.
	* source/geom/CoordinateSequence.cpp,
	source/headers/geos/geom/CoordinateSequence.h,
	tests/unit/geom/CoordinateArraySequenceTest.cpp:
	Added equality and inequality operators and tests +
	indentation fixes and notes about things to be fixed.
	* source/planargraph/Node.cpp: implemented missing
	getEdgesBetween() method (untested).
	* source/headers/geos/planargraph/DirectedEdge.h,
	source/planargraph/DirectedEdge.cpp:
	provided a memory friendly version of toEdges() method.
	* source/geom/CoordinateArraySequence.cpp: explicitly invoked
	CoordinateSequence (copy) ctor - suggested by GCC warning.
	* source/headers/geos/geom/CoordinateSequence.h: added default
	ctor and copy ctor ( protected ).
	* acsite.m4, configure.in, source/headers/geos/platform.h.in:
	Check for int64_t type for int64 typedef.
	* source/algorithm/ConvexHull.cpp,
	source/algorithm/PointLocator.cpp,
	source/algorithm/SimplePointInAreaLocator.cpp,
	source/geom/Envelope.cpp,
	source/geom/LineString.cpp,
	source/geomgraph/EdgeNodingValidator.cpp,
	source/geomgraph/EdgeRing.cpp,